# rocksndiamonds

./: .github_changelog_generator  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGES  CMakeLists.txt  COPYRIGHT  CREDITS  ChangeLog  DISCLAIMER  HARDWARE  INSTALL  INSTALLATION  Makefile  README  README.md  RECOMMENDATIONS  REGISTRATION  THIS_IS_NOW_FREEWARE  _Makefile  after_hash.txt  before_hash.txt  callgrind.out.35606  results_iterative.txt  results_save_state.txt  set_parallel_commands.sh  sourcelist.cmake  train1_commands.txt  train2_commands.txt  train_commands.txt  train_commands_2.txt  train_commands_3.txt
build-projects/android/: AndroidManifest.xml.tmpl  Makefile  README.txt  build.xml
build-scripts/: create_confs.sh  create_element_defs.pl  string_date.sh
docs/: about_changes.md  about_rnd.md  binaries.md  controller.md  controller_detailed.md  engine.md  example_controllers.md  logging.md  replay.md  usage.md
docs/elements/: bd_amoeba.txt  bd_butterfly.txt  bd_diamond.txt  bd_firefly.txt  bd_magic_wall.txt  bomb.txt  bug.txt  df_steel_grid_rotating.txt  df_wooden_grid_rotating.txt  dynamite.active.txt  dynamite.txt  exit_closed.txt  invisible_wall.txt  magic_wall.txt  mm_beamer.txt  mm_exit.txt  mm_pacman.txt  mm_polarisator.txt  mm_polarisator_cross.txt  mm_steel_grid_fixed.txt  mm_wooden_grid_fixed.txt  nut.txt  quicksand_empty.txt  robot.txt  robot_wheel.txt  spaceship.txt  wall_bd_diamond.txt  wall_crystal.txt  wall_diamond.txt  wall_emerald.txt  wall_emerald_purple.txt  wall_emerald_red.txt  wall_emerald_yellow.txt  wall_pearl.txt  yamyam.txt
graphics/gfx_classic/: Makefile  RocksDoor.ilbm  RocksDoor2.ilbm  RocksScreen.ilbm  RocksTouch.ilbm  rocks_icon_32x32.pcx
levels/creation/: 001.level  002.level  004.level  levelinfo.conf  template.level
levels/generated_levels/: 001.level  0011.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  levelinfo.conf  template.level
levels/generated_levels1/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  levelinfo.conf
levels/generated_levels2/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+12 more)
levels/generated_levels3/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  levelinfo.conf
levels/hard_deadlock/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  levelinfo.conf  template.level
levels/long_plan/: 001.level  002.level  003.level  004.level  005.level  007.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  levelinfo.conf  template.level
levels/long_plan2/: 006.level  008.level  016.level  017.level  018.level  019.level  levelinfo.conf  template.level
levels/simple_deadlock/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  levelinfo.conf  template.level
levels/test_levels/: 001.level  002.level  003.level  levelinfo.conf  template.level
levels/train1/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+948 more)
levels/train2/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+950 more)
levels/train3/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+951 more)
levels/train4/: 001.level  002.level  003.level  004.level  005.level  006.level  007.level  008.level  009.level  010.level  011.level  012.level  013.level  014.level  015.level  016.level  017.level  018.level  019.level  020.level  021.level  022.level  023.level  024.level  025.level  026.level  027.level  028.level  029.level  030.level  031.level  032.level  033.level  034.level  035.level  036.level  037.level  038.level  039.level  040.level  (+947 more)
levelset-generator/: generate_levelset.py  info.txt  requirements.txt
src/: -transparent  Android.mk  Makefile  _Makefile  anim.c  anim.h  buttons.c  buttons.h  cartoons.c  cartoons.h  conf_act.c  conf_chr.c  conf_chr.h  conf_cus.c  conf_cus.h  conf_dem.c  conf_e2g.c  conf_e2s.c  conf_esg.c  conf_fnt.c  conf_g2m.c  conf_g2s.c  conf_gen.c  conf_gfx.c  conf_gfx.h  conf_grp.c  conf_grp.h  conf_hlp.c  conf_inf.c  conf_mus.c  conf_mus.h  conf_snd.c  conf_snd.h  conf_var.c  config.c  config.h  conftime.h  editor.c  editor.h  engines.h  (+57 more)
(+5813 files in other folders)
